--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -10,5 +10,6 @@
     <script src="https://kit.fontawesome.com/72a545861a.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/images/logo/favicon-32x32.png">
     <link href="/css/styles.css" rel= "stylesheet">
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
 </head>
