--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -33,11 +33,10 @@
         <div class="lista-conteiner-productos">
                 <label>Ordena por..</label>
                     <select name="list-options">
-                        <option value = "Precio Mayor a Menor"><a href="/productos/carrito">carritos</a></option>
+                        <option value = "Precio Mayor a Menor"><a href="/productos/carrito">Precio Mayor a Menor</a></option>
                         <option value = "Precio Menor a Mayor">Precio Menor a Mayor</option>
                         <option value = "A-Z">A-Z</option>
                         <option value = "Z-A">Z-A</option>
-                        <option value = "Mas Vendido" selected >Mas Vendido</option> require
                     </select>
         </div>
     </section>
