--- a/src/views/users/userProfile.ejs
+++ b/src/views/users/userProfile.ejs
@@ -27,9 +27,10 @@
                 <section class="section-izquierdo-contacto">
                 <div class="perfil-div-img">               
                     <label for="img" class="perfil-img"><strong>AVATAR</strong></label>
+                    <br>
                     <img src="/images/user-images/<%=usuario.image %>" alt="avatar" class="perfil-img">
                 </div>   
-                </section><br><br>
+                </section>
 
 
                 <section class="section-izquierdo-contacto">
