Un administrador puede crear usuarios administradores

--- a/src/views/users/admin.ejs
+++ b/src/views/users/admin.ejs
@@ -12,6 +12,7 @@
     <div class="contenedor-general">
         <h1 class= "saludoAdmin">Hola, <%= locals.userLogged.first_name %>!</h1>
         <a href= "/usuario/listausuarios"><button class= "botonListado">Listado de usuarios</button></a>
+        <a href= "/usuario/registrar-admin"><button class= "botonListado">Crear usuario administrador</button></a>
         <a href= "/productos"><button class= "botonListado">Listado de productos</button></a>
         <a href= "/productos/crear"><button class= "botonListado">Crear producto</button></a>
     </div>
