Nuevas modifaciones + DB

--- a/src/views/users/registerAdmin.ejs
+++ b/src/views/users/registerAdmin.ejs
@@ -102,10 +102,9 @@
                 <div class= errorImage></div>
             </div> 
 
-                <button type="submit" class="formulario-boton-fr">CREAR CUENTA</button>
+                <button type="submit" class="formulario-boton-fr">CREAR ADMINISTRADOR</button>
                 
                
-                <p> Si ya perteneces a nuestra comunidad entonces..<br><a href="/login">Iniciá sesión</a></p>
             
             </form>
         
