Trabajando en las APIS

--- a/src/views/users/userEdit.ejs
+++ b/src/views/users/userEdit.ejs
@@ -65,6 +65,7 @@
                         <%= errors.password.msg %>
                     </div>
                 <% } %>
+                <div class= "errorPw errorMensaje"></div>
             </div>  
             <div class="fomulario-div-fr">  
                 <label for="confirm"><strong>CONFIRMAR CONTRASEÑA</strong></label>
@@ -75,6 +76,7 @@
                         <%= errors.confirm.msg %>
                     </div>
                 <% } %>
+                <div class= "errorConfirmPw errorMensaje"></div>
             </div> 
             <div class="fomulario-div-fr">
                 <label for="profileImage"><strong>IMAGEN DE PERFIL</strong></label>
