--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,8 +2,8 @@
     <section class= "header-arriba">
         <section class= "header-top">
             <div class="buscador">
-                <form action="" method="POST">
-                    <i class="fas fa-search"></i><input type="text" name="search" placeholder="Buscar">
+                <form action="/productos/busqueda/" method="POST">
+                    <i class="fas fa-search"></i><input type="text" name="search" placeholder="Buscar producto">
                  </form>
             </div>
             <div class= "header-right">
