--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -13,15 +13,18 @@
         <h1 class= "titulo-carrito">Carrito de compras</h1>
         <section class= "cuadro-carrito">
             <div id= "imagen-nombre" class= "item-carrito">
-                <img id= "imagen-producto" src= "/images/plantas/interior/pothus-m12.jpg">
-                <h4 id= "imagen-nombre" class= "item-carrito">DÚO NACARADA CHICA + PHILO PERUVIANO</h4>
+                <img id= "imagen-producto" src= "/images/productos/interior/aphelandra.png">
+                <h4 id= "imagen-nombre" class= "item-carrito">APHELANDRA - M14</h4>
             </div>
-            <div id= "cantidad-carrito" class= "item-carrito">
+            <!--
+                <div id= "cantidad-carrito" class= "item-carrito">
                 <h3>CANTIDAD</h3>
                 <span><a href= "">-</a></span>
                 <span>1</span>
                 <span><a href= "">+</a></span>
             </div>
+
+            -->
             <div id= "precio-carrito" class= "item-carrito">
                 <h3>PRECIO</h3>
                 <h3 class= "importe">$ 1</h3>
