Modificación de contraseña

--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -30,7 +30,7 @@
 
             <!--MENU DESPLEGABLE-->
 
-        <div class="lista-conteiner-productos">
+        <!-- <div class="lista-conteiner-productos">
                 <label>Ordena por..</label>
                     <select name="list-options">
                         <option value = "Precio Mayor a Menor"><a href="/productos/carrito">Precio Mayor a Menor</a></option>
@@ -38,7 +38,7 @@
                         <option value = "A-Z">A-Z</option>
                         <option value = "Z-A">Z-A</option>
                     </select>
-        </div>
+        </div> -->
     </section>
 
     <!-- FILTRO DE TIPO DE PRODUCTO -->
