--- a/src/views/home/sinPermiso.ejs
+++ b/src/views/home/sinPermiso.ejs
@@ -10,14 +10,11 @@
 
     <!-- INICIO MAIN  -->
     <div class="contenedor-general sinPermiso">
-        <h1 class= "sinPermiso-titulo">¡Ups! Lo siento, usted no tiene permiso para ingresar a esta sección.</h1>
+        <h1 class= "sinPermiso-titulo">¡Ups! no tenés permiso para ingresar a esta sección</h1>
         <div class= "contenedor-sinPermiso">
-            <img class= "sinPermiso-imagen"src= "/images/logo/sinPermiso2.png">
+            <a href='/'><img class= "sinPermiso-imagen"src= "/images/denegado.png"></a>
+            <br>
         </div>
-        <div class= "contenedor-Boton">
-            <a href="/"><button class= "botonPermiso">¡Hacé click para volver al inicio!</button></a>
-        </div>
-
     </div>
 
     <%-include ("../partials/footer.ejs") %>
