--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -29,7 +29,7 @@
             </div>
         </section>
         <div class= "logo">
-            <img width=150px heigth=150px src="/images/logo/logo-cursiva.png" alt="Calathea-logo">
+            <a href="/"></a><img width=150px heigth=150px src="/images/logo/logo-cursiva.png" alt="Calathea-logo">
         </div>
 
         <!-- icono del nav mobile-->
