--- a/src/views/home/preguntas-frecuentes.ejs
+++ b/src/views/home/preguntas-frecuentes.ejs
@@ -10,39 +10,37 @@
        <!-- PARTIAL DEL HEADER-->
 <%-include ("../partials/header.ejs") %>
 <div class="contenedor-general">
-    <article class="main_preguntas">
-        <h1>PREGUNTAS FRECUENTES</h1>
-        <br>
-        <h3>Envíos</h3>
-        <br>
-        <h4>¿CUÁLES SON LAS FORMAS DE ENVÍO?</h4>
-        <br>
-        <p>Dadas las circunstancias actuales, los envíos se coordinan una vez realizada la compra:</p><br>
-            <ul class="lista_preguntas">
-            <li class="lista_preguntas-li">Ofrecemos envíos gratis para compras iguales o superiores a AR $3500.</li><br>
-            <li class="lista_preguntas-li" >Dentro de CABA, podes mandar tu servicio favorito de mensajería a buscar tu compra (plataformas Uber, Rappi, PedidoYa, Cabify)</li><br>
-            <li class="lista_preguntas-li">Si tu pedido supera los 5kg (porque es sustrato o maceta) o incluye una planta te recomendamos que uses Cabify envíos o Taxi amigo</li><br>
-            <li class="lista_preguntas-li">Fuera de CABA, se realizan envíos a través del Correo OCA o Andreani.</li><br>
-        </ul>
-        <br>
-        <p>Si estás dentro de los 500m de distancia del local, podés retirar tu compra personalmente por el local CALATHEA, Cuenca 2356, Villa del Parque, CABA | Lunes a Sábados de 9 a 19 h.</p>
-        <br>
-        <br>
-        <h1>Plantas</h1>
-        <br>
-        <br>
-        <h3>¿LAS PLANTAS TIENEN CAMBIO?</h3>
-        <br>
-        <p>Las plantas son seres vivos que se adaptan a las condiciones ambientales en las que se encuentran, y su salud se ve afectada por varios factores de cuidados que no están a nuestro alcance.<br>
-            <strong>Por dichas razones, las plantas no tienen cambio.</strong><br>
+    <h2>PREGUNTAS FRECUENTES</h2>
+        <div class="main_preguntas">    
+            <div class="faq-contenedor1">
+                <h3>Envíos</h3>
+                <br>
+                <h4>¿CUALES SON LAS FORMAS DE ENVIO?</h4>
+                <br>
+                <p>Dadas las circunstancias actuales, los envíos se coordinan una vez realizada la compra:</p><br>
+                    <ul class="lista_preguntas">
+                        <li class="lista_preguntas-li">Ofrecemos envíos gratis para compras iguales o superiores a AR $3500.</li><br>
+                        <li class="lista_preguntas-li" >Dentro de CABA, podes mandar tu servicio favorito de mensajería a buscar tu compra (plataformas Uber, Rappi, PedidoYa, Cabify)</li><br>
+                        <li class="lista_preguntas-li">Si tu pedido supera los 5kg (porque es sustrato o maceta) o incluye una planta te recomendamos que uses Cabify envíos o Taxi amigo</li><br>
+                        <li class="lista_preguntas-li">Fuera de CABA, se realizan envíos a través del Correo OCA o Andreani.</li><br>
+                    </ul>
+                <br>
+                <p>Si estás dentro de los 500m de distancia del local, podés retirar tu compra personalmente por el local CALATHEA, Cuenca 2356, Villa del Parque, CABA | Lunes a Sábados de 9 a 19 h.</p>
+                <br><br>
+                <h3>Plantas</h3>
+                <br>
+                <h4>¿LAS PLANTAS TIENEN CAMBIO?</h4>
+                <br>
+                <p>Las plantas son seres vivos que se adaptan a las condiciones ambientales en las que se encuentran, y su salud se ve afectada por varios factores de cuidados que no están a nuestro alcance.<br><br>
+                <strong>Por dichas razones, las plantas no tienen cambio.</strong>
+                <br><br>
+                Para asegurarnos de que puedas cuidar de tu planta correctamente, se te asesorará en el momento de la compra y te brindaremos una ficha con los cuidados pertinentes a la planta que elegiste.</p>
+            </div>
+            <div class="faq-contenedor2">
+                <img src="/images/faq.png" class="faq-img" alt="FAQ">
+            </div>
+        </div>
 
-            Para asegurarnos de que puedas cuidar de tu planta correctamente, se te asesorará en el momento de la compra y te brindaremos una ficha con los cuidados pertinentes a la planta que elegiste.</p>
-
-
-        
-
-
-    </article>
 
 </div>
          <!-- PARTIAL DEL FOOTER-->
